--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-/* === removing default button style ===*/
   .blob {
     display: flex;
     justify-content: center;
@@ -29,4 +28,30 @@ body{
     font-family: "Doppio One", sans-serif;
     font-weight: 400;
     font-style: normal;
+}
+
+
+@keyframes scroll {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(calc(-100px * 16)); } /* Updated to fit doubled items */
+}
+
+.slider {
+  height: 100px;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
+  width: 960px;
+}
+
+.slide-track {
+  animation: scroll 15s linear infinite;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: calc(100px * 32);
+}
+
+.slide {
+  width: 100px;
 }
